# elte-var

./: CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
cmake/: conanConfig.cmake
src/: CMakeLists.txt  app.h  gui.cc  gui.h  logging.h  main.cc  model.h  types.h  utils.h  window.cc  window.h
